--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: sans-serif;
-      /* overflow: hidden; */
+      overflow: hidden;
     }
 
     svg {
