--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Family Tree</title>
+  <base href="/FamilyTree/">
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
   <script src="main.js" defer></script>
   <style>
